--- a/index.html
+++ b/index.html
@@ -10,11 +10,51 @@
     <!-- css stylesheet -->
     <link rel="stylesheet" href="style.css">
 
+    <!-- Website Icon -->
     <link rel="shortcut icon" href="images/icon/images.png" type="image/x-icon">
 </head>
 
 <body>
+    <!-- header start -->
+    <header>
 
+    </header>
+    <!-- header end -->
+
+    <!-- main section start -->
+    <main>
+        <section class="container">
+            <h1 class="section-title">Our Teachers</h1>
+            <div class="top-teachers">
+                <div class="teachers">
+                    <div class="teacher">
+                        <img src="images/teachers/teacher-1.png" alt="">
+                        <h2>John Smith</h2>
+                    </div>
+                    <div class="teacher">
+                        <img src="images/teachers/teacher-2.png" alt="">
+                        <h2>John Smith</h2>
+                    </div>
+                    <div class="teacher">
+                        <img src="images/teachers/teacher-3.png" alt="">
+                        <h2>John Smith</h2>
+                    </div>
+                    <div class="teacher">
+                        <img src="images/teachers/teacher-4.png" alt="">
+                        <h2>John Smith</h2>
+                    </div>
+                    <div class="teacher">
+                        <img src="images/teachers/teacher-5.png" alt="">
+                        <h2>John Smith</h2>
+                    </div>
+                    <div class="teacher">
+                        <img src="images/teachers/teacher-6.png" alt="">
+                        <h2>John Smith</h2>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
