added blogs and courses

--- a/index.html
+++ b/index.html
@@ -24,33 +24,111 @@
     <!-- main section start -->
     <main>
         <section class="container">
-            <h1 class="section-title">Our Teachers</h1>
             <div class="top-teachers">
+                <h1 class="section-title">Our Teachers</h1>
                 <div class="teachers">
                     <div class="teacher">
                         <img src="images/teachers/teacher-1.png" alt="">
-                        <h2>John Smith</h2>
+                        <h2 class="teachers_name">John Smith</h2>
                     </div>
                     <div class="teacher">
                         <img src="images/teachers/teacher-2.png" alt="">
-                        <h2>John Smith</h2>
+                        <h2 class="teachers_name">John Smith</h2>
                     </div>
                     <div class="teacher">
                         <img src="images/teachers/teacher-3.png" alt="">
-                        <h2>John Smith</h2>
+                        <h2 class="teachers_name">John Smith</h2>
                     </div>
                     <div class="teacher">
                         <img src="images/teachers/teacher-4.png" alt="">
-                        <h2>John Smith</h2>
+                        <h2 class="teachers_name">John Smith</h2>
                     </div>
                     <div class="teacher">
                         <img src="images/teachers/teacher-5.png" alt="">
-                        <h2>John Smith</h2>
+                        <h2 class="teachers_name">John Smith</h2>
                     </div>
                     <div class="teacher">
                         <img src="images/teachers/teacher-6.png" alt="">
-                        <h2>John Smith</h2>
+                        <h2 class="teachers_name">John Smith</h2>
                     </div>
+                </div>
+            </div>
+
+            <hr>
+
+            <div class="top-blogs">
+                <h1 class="section-title">Recent Blogs</h1>
+                <div class="blogs">
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-1.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h2 class="blog-title">13 of My Favorite UI/UX Goodies</h2>
+                            <p class="author">by <a href="">Danny Sapio</a> </p>
+                        </div>
+
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-2.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h2 class="blog-title">UI cheat sheet: <br>
+                                list vs grids</h2>
+                            <p class="author">by <a href="">Tess Gadd</a> </p>
+                        </div>
+
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-3.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h2 class="blog-title">7 typography tips
+                                for <br> interface design</h2>
+                            <p class="author">by <a href="">Jeremiah Lam</a> </p>
+                        </div>
+
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="images/blogs/blog-4.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h2 class="blog-title">Your logo is <br>
+                                copied</h2>
+                            <p class="author">by <a href="">Ferdinand Vogler</a> </p>
+                        </div>
+
+                    </article>
+                </div>
+            </div>
+        </section>
+
+        <section class="container">
+            <h1 class="section-title">Latest Course</h1>
+            <div class="courses">
+                <div class="course">
+                    <img src="images/courses/course-1.png" alt="">
+                    <h2>React - The Complete</h2>
+                    <h2>Guide 2020</h2>
+                    <div class="course_name">Reed Krakoff</div>
+                    <div class="rating"></div>
+                </div>
+                <div class="course">
+                    <img src="images/courses/course-2.png" alt="">
+                    <h2>React - The Complete</h2>
+                    <h2>Guide 2020</h2>
+                    <div class="course_name">Reed Krakoff</div>
+                    <div class="rating"></div>
+                </div>
+                <div class="course">
+                    <img src="images/courses/course-3.png" alt="">
+                    <h2>React - The Complete</h2>
+                    <h2>Guide 2020</h2>
+                    <div class="course_name">Reed Krakoff</div>
+                    <div class="rating"></div>
                 </div>
             </div>
         </section>
