--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Web Course</title>
 
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/62445b34d6.js" crossorigin="anonymous"></script>
+
     <!-- css stylesheet -->
     <link rel="stylesheet" href="style.css">
 
@@ -110,25 +113,86 @@
             <h1 class="section-title">Latest Course</h1>
             <div class="courses">
                 <div class="course">
-                    <img src="images/courses/course-1.png" alt="">
-                    <h2>React - The Complete</h2>
-                    <h2>Guide 2020</h2>
-                    <div class="course_name">Reed Krakoff</div>
-                    <div class="rating"></div>
+                    <div class="course_banner">
+                        <img src="images/courses/course-1.png" alt="">
+                    </div>
+                    <div class="course_info">
+                        <h2>React - The Complete</h2>
+                        <h2>Guide 2020</h2>
+                        <p class="course_name">Reed Krakoff</p>
+                        <div class="rating">
+                            <div>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star no-fill"></i>
+                            </div>
+
+                            4.5
+                            
+                            <div class="time-1">
+                                <i class="fa-regular fa-clock"></i>
+                                01:30 hr
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
                 <div class="course">
-                    <img src="images/courses/course-2.png" alt="">
-                    <h2>React - The Complete</h2>
-                    <h2>Guide 2020</h2>
-                    <div class="course_name">Reed Krakoff</div>
-                    <div class="rating"></div>
+                    <div class="course_banner">
+                        <img src="images/courses/course-2.png" alt="">
+                    </div>
+                    <div class="course_info">
+                        <h2>Powerpoint 2020</h2>
+                        <h2>Master Powerpoint Cour</h2>
+                        <p class="course_name">Walter Scott</p>
+                        <div class="rating">
+                            <div>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star no-fill"></i>
+                            </div>
+
+                            4.3
+
+                            <div class="time-1 time-2">
+                                <i class="fa-regular fa-clock"></i>
+                                01:20 hr
+                            </div>
+
+                        </div>
+                    </div>
+
                 </div>
                 <div class="course">
-                    <img src="images/courses/course-3.png" alt="">
-                    <h2>React - The Complete</h2>
-                    <h2>Guide 2020</h2>
-                    <div class="course_name">Reed Krakoff</div>
-                    <div class="rating"></div>
+                    <div class="course_banner">
+                        <img src="images/courses/course-3.png" alt="">
+                    </div>
+                    <div class="course_info">
+                        <h2>The Complete JavaScript</h2>
+                        <h2>Course 2020</h2>
+                        <p class="course_name">Reed Krakoff.</p>
+                        <div class="rating">
+                            <div>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star no-fill"></i>
+                            </div>
+
+                            4.5
+
+                            <div class="time-1">
+                                <i class="fa-regular fa-clock"></i>
+                                01:30 hr
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
