--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <img src="images/blogs/blog-1.png" alt="">
                         </div>
                         <div class="blog-info">
-                            <h2 class="blog-title">13 of My Favorite UI/UX Goodies</h2>
+                            <h2 class="blog-title">13 of My Favorite <br> UI/UX Goodies</h2>
                             <p class="author">by <a href="">Danny Sapio</a> </p>
                         </div>
 
@@ -130,7 +130,7 @@
                             </div>
 
                             4.5
-                            
+
                             <div class="time-1">
                                 <i class="fa-regular fa-clock"></i>
                                 01:30 hr
